# exercise_log

./: Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
exercise_log/: __init__.py  __main__.py  config.py  configuration.json  llm.py  parser.py  sheets.py  url_watcher.py  watcher.py
exercise_log/shortcuts/: Gym Log.webloc
tests/: __init__.py  test_llm.py  test_llm_integration.py  test_parser.py  test_sheets.py  test_url_watcher.py
